[gd_scene load_steps=32 format=2]

[ext_resource path="res://Editor.gd" type="Script" id=1]
[ext_resource path="res://terrain/RectTerrain.tscn" type="PackedScene" id=2]
[ext_resource path="res://parts/PartSelect.tscn" type="PackedScene" id=3]
[ext_resource path="res://gui/default.tres" type="Theme" id=4]
[ext_resource path="res://parts/WaterBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://parts/WoodBar.tscn" type="PackedScene" id=6]
[ext_resource path="res://parts/UnpoweredWheel.tscn" type="PackedScene" id=7]
[ext_resource path="res://parts/unpoweredicon.png" type="Texture" id=8]
[ext_resource path="res://parts/woodrod.png" type="Texture" id=9]
[ext_resource path="res://parts/waterrod.png" type="Texture" id=10]
[ext_resource path="res://sounds/error.wav" type="AudioStream" id=11]
[ext_resource path="res://parts/CWWheel.tscn" type="PackedScene" id=12]
[ext_resource path="res://parts/cwicon.png" type="Texture" id=13]
[ext_resource path="res://parts/ACWWheel.tscn" type="PackedScene" id=14]
[ext_resource path="res://parts/acwicon.png" type="Texture" id=15]
[ext_resource path="res://terrain/BuildArea.tscn" type="PackedScene" id=16]
[ext_resource path="res://terrain/buildicon.png" type="Texture" id=17]
[ext_resource path="res://terrain/GoalArea.tscn" type="PackedScene" id=18]
[ext_resource path="res://terrain/goalicon.png" type="Texture" id=19]
[ext_resource path="res://dynamics/GoalCircle.tscn" type="PackedScene" id=20]
[ext_resource path="res://dynamics/goalcircle.png" type="Texture" id=21]
[ext_resource path="res://terrain/CircleTerrain.tscn" type="PackedScene" id=22]
[ext_resource path="res://terrain/circicon.png" type="Texture" id=23]
[ext_resource path="res://terrain/rampicon.png" type="Texture" id=24]
[ext_resource path="res://terrain/RampTerrain.tscn" type="PackedScene" id=25]
[ext_resource path="res://dynamics/GoalRect.tscn" type="PackedScene" id=26]
[ext_resource path="res://dynamics/goalrect.png" type="Texture" id=27]
[ext_resource path="res://parts/air/Propeller.tscn" type="PackedScene" id=28]
[ext_resource path="res://parts/air/icon.png" type="Texture" id=29]
[ext_resource path="res://parts/air/Balloon.tscn" type="PackedScene" id=30]
[ext_resource path="res://parts/air/balloonicon.png" type="Texture" id=31]

[node name="Editor" type="Node2D"]
script = ExtResource( 1 )

[node name="Level" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Parts" type="GridContainer" parent="CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -128.0
theme = ExtResource( 4 )
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PartSelect" parent="CanvasLayer/Parts" instance=ExtResource( 3 )]
to_place = ExtResource( 2 )
place_type = "rect"

[node name="PartSelect10" parent="CanvasLayer/Parts" instance=ExtResource( 3 )]
margin_left = 96.0
margin_right = 192.0
icon = ExtResource( 23 )
to_place = ExtResource( 22 )
place_type = "circle"

[node name="PartSelect11" parent="CanvasLayer/Parts" instance=ExtResource( 3 )]
margin_left = 192.0
margin_right = 288.0
icon = ExtResource( 24 )
to_place = ExtResource( 25 )
place_type = "ramp"

[node name="PartSelect7" parent="CanvasLayer/Parts" instance=ExtResource( 3 )]
margin_left = 288.0
margin_right = 384.0
icon = ExtResource( 17 )
to_place = ExtResource( 16 )
place_type = "rect"

[node name="PartSelect8" parent="CanvasLayer/Parts" instance=ExtResource( 3 )]
margin_left = 384.0
margin_right = 480.0
icon = ExtResource( 19 )
to_place = ExtResource( 18 )
place_type = "rect"

[node name="PartSelect2" parent="CanvasLayer/Parts" instance=ExtResource( 3 )]
margin_left = 480.0
margin_right = 576.0
icon = ExtResource( 10 )
to_place = ExtResource( 5 )
place_type = "wrod"

[node name="PartSelect3" parent="CanvasLayer/Parts" instance=ExtResource( 3 )]
margin_left = 576.0
margin_right = 672.0
icon = ExtResource( 9 )
to_place = ExtResource( 6 )

[node name="PartSelect4" parent="CanvasLayer/Parts" instance=ExtResource( 3 )]
margin_left = 672.0
margin_right = 768.0
icon = ExtResource( 8 )
to_place = ExtResource( 7 )
place_type = "wheel"

[node name="PartSelect5" parent="CanvasLayer/Parts" instance=ExtResource( 3 )]
margin_top = 64.0
margin_bottom = 128.0
icon = ExtResource( 13 )
to_place = ExtResource( 12 )
place_type = "wheel"

[node name="PartSelect6" parent="CanvasLayer/Parts" instance=ExtResource( 3 )]
margin_left = 96.0
margin_top = 64.0
margin_right = 192.0
margin_bottom = 128.0
icon = ExtResource( 15 )
to_place = ExtResource( 14 )
place_type = "wheel"

[node name="PartSelect13" parent="CanvasLayer/Parts" instance=ExtResource( 3 )]
margin_left = 192.0
margin_top = 64.0
margin_right = 288.0
margin_bottom = 128.0
icon = ExtResource( 29 )
to_place = ExtResource( 28 )
place_type = "prop"

[node name="PartSelect14" parent="CanvasLayer/Parts" instance=ExtResource( 3 )]
margin_left = 288.0
margin_top = 64.0
margin_right = 384.0
margin_bottom = 128.0
icon = ExtResource( 31 )
to_place = ExtResource( 30 )
place_type = "circle"

[node name="PartSelect9" parent="CanvasLayer/Parts" instance=ExtResource( 3 )]
margin_left = 384.0
margin_top = 64.0
margin_right = 480.0
margin_bottom = 128.0
icon = ExtResource( 21 )
to_place = ExtResource( 20 )
place_type = "circle"

[node name="PartSelect12" parent="CanvasLayer/Parts" instance=ExtResource( 3 )]
margin_left = 480.0
margin_top = 64.0
margin_right = 576.0
margin_bottom = 128.0
icon = ExtResource( 27 )
to_place = ExtResource( 26 )
place_type = "rect"

[node name="TestButton" type="Button" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -154.0
margin_bottom = 48.0
theme = ExtResource( 4 )
text = "TEST"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButton" type="Button" parent="CanvasLayer"]
margin_right = 154.0
margin_bottom = 48.0
theme = ExtResource( 4 )
text = "SAVE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SnapButton" type="CheckButton" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -219.0
margin_top = -64.0
rect_min_size = Vector2( 0, 64 )
theme = ExtResource( 4 )
text = "Snap"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Error" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -5.0
[connection signal="pressed" from="CanvasLayer/TestButton" to="." method="_on_TestButton_pressed"]
[connection signal="pressed" from="CanvasLayer/SaveButton" to="." method="_on_SaveButton_pressed"]
